Fix theme json variables, remove powder specific spacing

--- a/assets/scss/blocks/core/footnotes.scss
+++ b/assets/scss/blocks/core/footnotes.scss
@@ -1,6 +1,8 @@
 /* -- footnotes -- */
 
 .wp-block-footnotes {
+	list-style-position: inside;
+
 	li {
 		a {
 			text-decoration: none;
