--- a/assets/scss/blocks/core/latest-comments.scss
+++ b/assets/scss/blocks/core/latest-comments.scss
@@ -1,7 +1,7 @@
 /* -- latest comments -- */
 
 .wp-block-latest-comments {
-	padding: var(--wp--preset--spacing--small) 0;
+	padding: var(--wp--preset--spacing--30) 0;
 
 	> * {
 		max-width: calc(
