--- a/assets/scss/blocks/core/latest-posts.scss
+++ b/assets/scss/blocks/core/latest-posts.scss
@@ -4,7 +4,7 @@
 
 .wp-block-latest-posts {
 	li {
-		margin-bottom: var(--wp--preset--spacing--small);
+		margin-bottom: var(--wp--preset--spacing--30);
 
 		&:last-of-type {
 			margin-bottom: 0;
