--- a/assets/scss/blocks/core/list.scss
+++ b/assets/scss/blocks/core/list.scss
@@ -8,8 +8,8 @@ main,
 			list-style-type: none;
 
 			li {
-				padding-bottom: var(--wp--preset--spacing--x-small);
-				padding-left: var(--wp--preset--spacing--small);
+				padding-bottom: var(--wp--preset--spacing--20);
+				padding-left: var(--wp--preset--spacing--40);
 				position: relative;
 
 				&::before {
@@ -29,7 +29,7 @@ main,
 
 			ul {
 				padding-bottom: 0;
-				padding-left: var(--wp--custom--spacing--gap);
+				padding-left: var(--wp--preset--spacing--30);
 			}
 		}
 	}
@@ -40,11 +40,11 @@ main,
 		&:not([class]),
 		&.wp-block-list {
 			padding-left: var(
-				--wp--custom--spacing--gap
+				--wp--preset--spacing--30
 			) !important; /* stylelint-disable-line declaration-no-important */
 
 			li {
-				padding-bottom: var(--wp--preset--spacing--x-small);
+				padding-bottom: var(--wp--preset--spacing--20);
 				position: relative;
 
 				&::marker {
@@ -58,7 +58,7 @@ main,
 
 			ol {
 				padding-bottom: 0;
-				padding-left: var(--wp--custom--spacing--gap);
+				padding-left: var(--wp--preset--spacing--30);
 			}
 		}
 	}
