--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -2,7 +2,7 @@
 
 .site-footer {
 	border-top: 1px solid var(--wp--preset--color--grey-400);
-	padding-bottom: var(--wp--preset--spacing--medium);
-	padding-top: var(--wp--preset--spacing--x-large);
-	margin-top: var(--wp--preset--spacing--x-large);
+	padding-bottom: var(--wp--preset--spacing--40);
+	padding-top: var(--wp--preset--spacing--60);
+	margin-top: var(--wp--preset--spacing--60);
 }
