--- a/assets/scss/pages/_404.scss
+++ b/assets/scss/pages/_404.scss
@@ -6,7 +6,7 @@
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
-		margin: var(--wp--preset--spacing--x-large) auto;
+		margin: var(--wp--preset--spacing--60) auto;
 
 		.error-title {
 			align-items: center;
